--- a/package.json
+++ b/package.json
@@ -3,17 +3,67 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {},
-  "private": true,
-  "dependencies": {},
+  "private": false,
   "devDependencies": {
-    "@nx/js": "19.8.13",
-    "@nx/workspace": "19.8.13",
-    "@swc-node/register": "~1.9.1",
-    "@swc/core": "~1.5.7",
-    "@swc/helpers": "~0.5.11",
-    "nx": "19.8.13",
+    "@eslint/js": "^9.8.0",
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.2",
+    "@nx/eslint": "^19.8.13",
+    "@nx/eslint-plugin": "^19.8.13",
+    "@nx/jest": "^19.8.13",
+    "@nx/js": "^19.8.13",
+    "@nx/nest": "^19.8.13",
+    "@nx/node": "^19.8.13",
+    "@nx/web": "^19.8.13",
+    "@nx/webpack": "^19.8.13",
+    "@nx/workspace": "^19.8.13",
+    "@swc-node/register": "^1.9.1",
+    "@swc/cli": "^0.3.12",
+    "@swc/core": "^1.5.7",
+    "@swc/helpers": "^0.5.11",
+    "@swc/jest": "^0.2.36",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^22.10.1",
+    "@types/supertest": "^2.0.11",
+    "eslint": "^9.8.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
+    "nx": "^19.8.13",
     "prettier": "^2.6.2",
+    "supertest": "^6.1.6",
+    "ts-jest": "^29.1.0",
+    "ts-loader": "^9.2.3",
+    "ts-node": "^10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "~5.5.2"
+    "typescript": "^5.5.2",
+    "typescript-eslint": "^8.0.0",
+    "verdaccio": "^5.0.4",
+    "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "@nestjs/cli": "^10.4.8",
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^3.3.0",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/platform-express": "^10.4.11",
+    "@nestjs/typeorm": "^10.0.2",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.53.0",
+    "@opentelemetry/exporter-logs-otlp-http": "^0.55.0",
+    "@opentelemetry/resources": "^1.28.0",
+    "@opentelemetry/sdk-logs": "^0.55.0",
+    "@opentelemetry/sdk-node": "^0.55.0",
+    "axios": "^1.7.8",
+    "express": "^4.21.1",
+    "mongodb": "^5.9.2",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20"
+  },
+  "nx": {
+    "includedScripts": []
   }
 }
