--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -5,7 +5,6 @@
     "declaration": true,
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
-
     "experimentalDecorators": true,
     "importHelpers": true,
     "lib": ["es2020", "dom"],
@@ -15,7 +14,8 @@
     "skipDefaultLibCheck": true,
     "skipLibCheck": true,
     "sourceMap": true,
-    "target": "es2015",
+    "strict": true,
+    "target": "es2019",
     "paths": {}
   },
   "exclude": ["node_modules", "tmp"]
