--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {},
   "private": false,
   "devDependencies": {
-    "@eslint/js": "^9.8.0",
+    "@eslint/js": "^8.56.0",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
     "@nx/eslint": "^19.8.13",
@@ -26,20 +26,22 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^22.10.1",
     "@types/supertest": "^2.0.11",
-    "eslint": "^9.8.0",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "nx": "^19.8.13",
-    "prettier": "^2.6.2",
+    "prettier": "^3.1.0",
+    "prettier-eslint": "^16.1.2",
     "supertest": "^6.1.6",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "^5.5.2",
-    "typescript-eslint": "^8.0.0",
+    "typescript": "^5.3.3",
     "verdaccio": "^5.0.4",
     "webpack-cli": "^5.1.4"
   },
