feat(flux): ✨ add path mapping for @org/flux

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,11 @@
     "sourceMap": true,
     "strict": true,
     "target": "es2019",
-    "paths": {}
+    "paths": {
+      "@org/flux": [
+        "libs/flux/src/index.ts"
+      ]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
