--- a/libs/flux/package.json
+++ b/libs/flux/package.json
@@ -2,7 +2,8 @@
   "name": "@libs/flux",
   "version": "0.0.1",
   "dependencies": {
-    "@swc/helpers": "~0.5.11"
+    "@swc/helpers": "^0.5.11",
+    "rxjs": "^7.8.1"
   },
   "type": "commonjs",
   "main": "./src/index.js",
