chore(flux): 🔨 update package.json and project.json for naming and private status

--- a/libs/flux/project.json
+++ b/libs/flux/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "flux",
+  "name": "@libs/flux",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/flux/src",
   "projectType": "library",
