--- a/libs/flux/package.json
+++ b/libs/flux/package.json
@@ -7,5 +7,6 @@
   },
   "type": "commonjs",
   "main": "./src/index.js",
-  "typings": "./src/index.d.ts"
+  "typings": "./src/index.d.ts",
+  "private": false
 }
