--- a/libs/flux/project.json
+++ b/libs/flux/project.json
@@ -25,7 +25,16 @@
         "main": "libs/flux/src/index.ts",
         "tsConfig": "libs/flux/tsconfig.lib.json",
         "assets": [
-          "libs/flux/README.md"
+          {
+            "input": "libs/flux",
+            "glob": "README.md",
+            "output": "."
+          },
+          {
+            "input": "libs/flux",
+            "glob": "package.json",
+            "output": "."
+          }
         ]
       }
     },
@@ -33,7 +42,6 @@
       "options": {
         "packageRoot": "dist/{projectRoot}",
         "registryUrl": "https://registry.npmjs.org/",
-        "tag": "latest",
         "access": "public"
       }
     }
