--- a/project.json
+++ b/project.json
@@ -9,6 +9,13 @@
         "config": ".verdaccio/config.yml",
         "storage": "tmp/local-registry/storage"
       }
+    },
+    "nx-release-publish": {
+      "options": {
+        "packageRoot": ".",
+        "registryUrl": "https://registry.npmjs.org/",
+        "access": "public"
+      }
     }
   }
 }
